# kv-memory

./: .gitignore  ISSUES.md  README.md  local_bench.py  modal_beam.py  modal_bench.py  modal_test.py  pyproject.toml  pytest.ini  requirements.txt
docs/: EVAL_RESULTS.md  IMPLEMENTATION_STATUS.md  PLAN.md  issues.md  ramp_labs_research  research1.md  routerless_msa_future_plan.md
examples/: basic_chat_memory.py  eval_retrieval_benchmark.py  qwen_e2e_memory_chat.py  qwen_kv_capture.py  qwen_kv_injection.py
kvmemory/: __init__.py  config.py  memory.py
kvmemory/adapters/: base.py  hf_adapter.py  llamacpp_adapter.py  vllm_adapter.py
kvmemory/core/: chunker.py  dynamic_memory.py  importance.py  injector.py  queue.py  retrieval.py  write_pipeline.py
kvmemory/dashboard/: __init__.py  api.py
kvmemory/observability/: __init__.py  store.py
kvmemory/storage/: kv_store.py  schema.py  vector_db.py
kvmemory/utils/: __init__.py  model_id.py
scripts/: compare_beam_results.py  oracle_inject_beam.py
src/kv_memory/: __init__.py  config.py  embeddings.py  engine.py  hf_hooks.py  hf_memory_runner.py  kv_bank.py  kv_capture.py  qwen_kv_engine.py  retriever.py  store.py  types.py  windowing.py
tests/: beam_eval.py  conftest.py  test_chunker.py  test_dynamic_memory.py  test_hf_adapter.py  test_injection.py  test_observability.py  test_retrieval.py  test_store_layers.py
